--- a/tests/oc-integration-tests/local/storage-users.toml
+++ b/tests/oc-integration-tests/local/storage-users.toml
@@ -15,7 +15,7 @@ address = "0.0.0.0:11000"
 # we have a locally running dataprovider
 [grpc.services.storageprovider]
 driver = "ocis"
-mount_path = "/users"
+mount_path = "/oc"
 mount_id = "123e4567-e89b-12d3-a456-426655440000"
 expose_data_server = true
 data_server_url = "http://localhost:11001/data"
