--- a/tests/oc-integration-tests/local/ldap-users.toml
+++ b/tests/oc-integration-tests/local/ldap-users.toml
@@ -20,7 +20,7 @@ bind_username="cn=admin,dc=owncloud,dc=com"
 bind_password="admin"
 idp="http://localhost:18000"
 [grpc.services.authprovider.auth_managers.ldap.schema]
-uid="uid"
+uid="entryuuid"
 displayName="displayName"
 dn="dn"
 cn="cn"
@@ -33,16 +33,16 @@ hostname="localhost"
 port=636
 insecure=true
 base_dn="dc=owncloud,dc=com"
-userfilter="(&(objectclass=posixAccount)(|(uid={{.OpaqueId}})(cn={{.OpaqueId}})))"
+userfilter="(&(objectclass=posixAccount)(|(entryuuid={{.OpaqueId}})(cn={{.OpaqueId}})))"
 findfilter="(&(objectclass=posixAccount)(|(cn={{query}}*)(displayname={{query}}*)(mail={{query}}*)))"
 attributefilter="(&(objectclass=posixAccount)({{attr}}={{value}}))"
-groupfilter="(&(objectclass=posixGroup)(cn=*)(memberuid={{.OpaqueId}}))"
+groupfilter="(&(objectclass=posixGroup)(cn=*)(memberuid={{.}}))"
 bind_username="cn=admin,dc=owncloud,dc=com"
 bind_password="admin"
 idp="http://localhost:18000"
 
 [grpc.services.userprovider.drivers.ldap.schema]
-uid="uid"
+uid="entryuuid"
 displayName="displayName"
 dn="dn"
 cn="cn"
