--- a/tests/oc-integration-tests/local/gateway.toml
+++ b/tests/oc-integration-tests/local/gateway.toml
@@ -69,7 +69,7 @@ home_provider = "/home"
 
 [grpc.services.gateway.storage_rules]
 "/home" = {"address" = "localhost:12000"}
-"/oc" = {"address" = "localhost:11000"}
+"/users" = {"address" = "localhost:11000"}
 "123e4567-e89b-12d3-a456-426655440000" = {"address" = "localhost:11000"}
 "/public" = {"address" = "localhost:13000"}
 "/home/Shares" = {"address" = "localhost:14000"}
